--- a/DotnetAspireDemo/DotnetAspireDemo.ApiService/appsettings.json
+++ b/DotnetAspireDemo/DotnetAspireDemo.ApiService/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "blobsConnectionName": "https://dotnetaspiredemo.blob.core.windows.net/"
+  }
 }
