--- a/DotnetAspireDemo/DotnetAspireDemo.AppHost/DotnetAspireDemo.AppHost.csproj
+++ b/DotnetAspireDemo/DotnetAspireDemo.AppHost/DotnetAspireDemo.AppHost.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting" Version="8.0.0-preview.2.23619.3" />
+    <PackageReference Include="Aspire.Hosting.Azure" Version="8.0.0-preview.2.23619.3" />
   </ItemGroup>
 
 </Project>
