fix: permission error

--- a/DotnetAspireDemo/DotnetAspireDemo.ApiService/appsettings.json
+++ b/DotnetAspireDemo/DotnetAspireDemo.ApiService/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "blobsConnectionName": "https://dotnetaspiredemo.blob.core.windows.net/"
-  }
+  "AllowedHosts": "*"
 }
