--- a/DotnetAspireDemo/DotnetAspireDemo.AppHost/appsettings.json
+++ b/DotnetAspireDemo/DotnetAspireDemo.AppHost/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning",
       "Aspire.Hosting.Dcp": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "blobs": "https://dotnetaspiredemo.blob.core.windows.net/"
   }
 }
